[tool.poetry]
name = "cloudbaydns"
version = "0.1.0"
description = ""
authors = ["Rahul V Ramesh <rahulvramesh@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
unicorn = "^1.0.3"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
mypy = "^0.931"
autoflake = "^1.4"
isort = "^5.10.1"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
